able to display html questions using eventlistnerer

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <!-- create quiz heading -->
     <h1>Test your HTML, CSS and JavaScript knowledge</h1>
     <!-- create a div element for quiz and add start quiz button in it -->
-    <div class="quiz">
-        <button class= "start_quiz"></button> Start the quiz</h2>
+    <div class="container">
+        <div class ="quiz">
+        <button class= "start_quiz">Start the quiz</button>
+        <button class="html_quiz">HTML</button>
+        <button class="css_quiz">CSS</button>
+        <button class="javascript_quiz">JavaScript</button>
     </div>
 <form>
     <!-- create a submit button to submit quiz -->
