added css  layout to page

--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Self scoring Trivia game</title>
+    <title>Self scoring trivia</title>
 </head>
-<body>
-    <!-- create quiz heading -->
-    <h1>Test your HTML, CSS and JavaScript knowledge</h1>
-    <!-- create a div element for quiz and add start quiz button in it -->
-    <!-- <div class="container"> -->
-        <div class ="quiz">
-        <form>
-            <input id = "quiz_id" type='radio' name='question' value = 'letter'>
-        <button class= "start_quiz">Start the quiz</button>
-        <button class="html_quiz" >HTML</button>
-        <button class="css_quiz">CSS</button>
-        <button class="javascript_quiz">JavaScript</button>
-   
-    </form>
-    </div>
 
-    <!-- <button class="submit">Submit Quiz</button> -->
-    <div class="results"></div>
- 
-    
-    <script src="script.js"></script>
+<body>
+    <div class=container>
+        <div class="container">
+            <header>
+                <h1>Test your HTML, CSS and JavaScript Knowledge</h1>
+            </header>
+            <article>
+                <h2>Purpose of Quiz</h2>
+                <p>
+                    This quiz is designed to check your programming Knowledge.
+                </p>
+                <hr>
+                <h2>About Quiz</h2>
+                <section>
+                    <div class="quiz_info">
+                        <p>
+                            This quiz contains five questions on each HTML, CSS and JavaScript.
+                        </p>
+                    </div>
+                    <footer>
+                        <a href="quiz.html">Start the Quiz</a>
+                    </footer>
+        </div>
+        <script src="quiz.js"></script>
+        <script src="script.js"></script>
 </body>
+
 </html>
