added functionality for computer to check answer

--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
         <label class="choice"><input type="radio" name="choice" value='1' />
             <span id="choice1">1</span>
         </label>
-        <label class="choice"><input type="radio" name="choice" value='2' />
+        <label class="choice"><input type="radio" name="choice" value='2'/>
             <span id="choice2">2</span>
         </label>
         <label class="choice"><input type="radio" name="choice" value='3' />
@@ -28,7 +28,9 @@
         </label>
         <button id="nextButton" onClick="getNextQuestion();">Next</button>
         <div id="time"> </div>
-        <div id="result" class="container result" style="display:none;"></div>
+        <div id="result" class="container result"></div>
+        <div id="displayScore"></div>
+
     </main>
    
     <script src="quiz.js"></script>
