--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <article>
                 <h2>Purpose of Quiz</h2>
                 <p>
-                    This quiz is designed to check your programming Knowledge.
+                    This quiz is designed to test users programming Knowledge.
                 </p>
                 <hr>
                 <h2>About Quiz</h2>
                 <section>
                     <div class="quiz_info">
                         <p>
-                            This quiz contains five questions on each HTML, CSS and JavaScript.
+                            This quiz contains five questions on each HTML, CSS and JavaScript. Each question is worth five points.
                         </p>
                     </div>
                     <footer>
