--- a/quiz.html
+++ b/quiz.html
@@ -10,30 +10,35 @@
 
 <body>
     <header>
-        <div id = 'quiz' class= 'container'></div>
-        <h2 id="question">Enter your question here</h2>
+        <div id="quiz">
+            <h1 id="question"></h1>
     </header>
     <main>
-        <label class="choice"><input type="radio" name="choice" value='1' />
-            <span id="choice1">1</span>
+        <div class="container"></div>
+        <h1 id="question"></h1>
+        <label>
+            <input type="radio" name="option" value="" id="opt1"><span for="opt1"></span>
         </label>
-        <label class="choice"><input type="radio" name="choice" value='2'/>
-            <span id="choice2">2</span>
+        <label>
+            <input type="radio" name="option" value="" id="opt1"><span for="opt2"></span>
         </label>
-        <label class="choice"><input type="radio" name="choice" value='3' />
-            <span id="choice3">3</span>
+        <label>
+            <input type="radio" name="option" value="" id="opt3"><span for="opt3"></span>
         </label>
-        <label class="choice"><input type="radio" name="choice" value='4' />
-            <span id="choice4">4</span>
+        <label>
+            <input type="radio" name="option" value="" id="opt4"><span for="opt4"></span>
         </label>
-        <button id="nextButton" onClick="getNextQuestion();">Next</button>
-        <div id="time"> </div>
-        <div id="result" class="container result"></div>
-        <div id="displayScore"></div>
-
     </main>
-   
+    <button class="next">Next</button>
+
+    <div id="result"></div>
+       
+    <footer>
+        <a href='index.html'>Go to home Page</a>
+        <div id="time"></div>
+    </footer>
     <script src="quiz.js"></script>
+
 </body>
 
 </html>
