--- a/quiz.html
+++ b/quiz.html
@@ -10,32 +10,32 @@
 
 <body>
     <header>
-        <div id="quiz">
-            <h4 id="question"></h4>
+        <div id="quiz"></div>
+        <h4 id="question"></h4>
     </header>
     <main>
         <div class="container"></div>
         <h4 id="question"></h4>
         <label>
-            <input type="radio" name="option" value="" id="opt1"><span for="opt1"></span>
+            <input type="radio" name="option" value="" id="opt1"><span id="option1"></span>
         </label>
         <label>
-            <input type="radio" name="option" value="" id="opt1"><span for="opt2"></span>
+            <input type="radio" name="option" value="" id="opt2"><span id="option2"></span>
         </label>
         <label>
-            <input type="radio" name="option" value="" id="opt3"><span for="opt3"></span>
+            <input type="radio" name="option" value="" id="opt3"><span id="option3"></span>
         </label>
         <label>
-            <input type="radio" name="option" value="" id="opt4"><span for="opt4"></span>
+            <input type="radio" name="option" value="" id="opt4"><span id="option4"></span>
         </label>
+        <button class="next">Next</button>
     </main>
-    <button class="next">Next</button>
 
-    <div id="result"></div>
-       
+    <div id="result"> </div>
+    <div id="time"></div>
     <footer>
         <a href='index.html'>Go to home Page</a>
-        <div id="time"></div>
+
     </footer>
     <script src="quiz.js"></script>
 
