--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class=container>
+    <!-- <div class=container> -->
         <div class="container">
             <header>
                 <h1>Test your HTML, CSS and JavaScript Knowledge</h1>
