--- a/index.html
+++ b/index.html
@@ -2,37 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Self scoring trivia</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Test your programming Knowledge</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!-- <div class=container> -->
-        <div class="container">
-            <header>
-                <h1>Test your HTML, CSS and JavaScript Knowledge</h1>
-            </header>
-            <article>
-                <h2>Purpose of Quiz</h2>
-                <p>
-                    This quiz is designed to test users programming Knowledge.
-                </p>
-                <hr>
-                <h2>About Quiz</h2>
-                <section>
-                    <div class="quiz_info">
-                        <p>
-                            This quiz contains five questions on each HTML, CSS and JavaScript. Each question is worth five points.
-                        </p>
-                    </div>
-                    <footer>
-                        <a href="quiz.html">Start the Quiz</a>
-                    </footer>
+    <div class="container">
+        <div class="right">
+            <h1>Welcome to self scoring trivia game!</h1>
+            <h2>Quiz Details:</h2>
+            <ul>
+                <li>Quiz contains five questions each on HTML, CSS and JavaScript</li>
+                <li>There are total 20 Questions (15 sec each)</li>
+                <li>Each question is worth 5 points</li>
+            </ul>
+            <a href="quiz.html">Start Quiz</a>
         </div>
-        <script src="quiz.js"></script>
-        <script src="script.js"></script>
+    </div>
+    <script src="quiz.js"></script>
+
 </body>
 
 </html>
